@@ -27,6 +27,7 @@
 #include "Hyphenation.h"
 
 #include "AtomicStringKeyedMRUCache.h"
+#include "Language.h"
 #include "TextBreakIteratorInternalICU.h"
 #include <wtf/ListHashSet.h>
 #include <wtf/RetainPtr.h>
@@ -36,7 +37,9 @@ namespace WebCore {
 template<>
 RetainPtr<CFLocaleRef> AtomicStringKeyedMRUCache<RetainPtr<CFLocaleRef> >::createValueForNullKey()
 {
-    RetainPtr<CFLocaleRef> locale = adoptCF(CFLocaleCopyCurrent());
+    // CF hyphenation functions use locale (regional formats) language, which doesn't necessarily match primary UI language,
+    // so we can't use default locale here. See <rdar://problem/14897664>.
+    RetainPtr<CFLocaleRef> locale = adoptCF(CFLocaleCreate(0, defaultLanguage().createCFString().get()));
 
     return CFStringIsHyphenationAvailableForLocale(locale.get()) ? locale : 0;
 }
