@@ -1,3 +1,13 @@
+2013-09-03  Alexey Proskuryakov  <ap@apple.com>
+
+        [Mac] Hyphenation respects regional format settings language instead of primary language
+        https://bugs.webkit.org/show_bug.cgi?id=120641
+
+        Reviewed by Dan Bernstein.
+
+        * platform/mac/fast/text/hyphenate-locale-expected.png: Added, this test only had
+        expected pixel results in mac-lion dorectory.
+
 2013-09-03  Daniel Bates  <dabates@apple.com>
 
         Require layout when -webkit-overflow-scrolling changes
